Fixed project reference, added exception if API key isn't found, fixed environment variable name, updated to use interface

--- a/Innovian.Telnyx.Storage.Tests/Innovian.Telnyx.Storage.Tests.csproj
+++ b/Innovian.Telnyx.Storage.Tests/Innovian.Telnyx.Storage.Tests.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Innovian.Telnyx.Storage\Innovian.Telnyx.Storage.csproj" />
     <ProjectReference Include="..\Telnyx.Storage.Dotnet\Innovian.Telnyx.Storage.csproj" />
   </ItemGroup>
 
