Updated so test file is always included in build

--- a/Innovian.Telnyx.Storage.Tests/Innovian.Telnyx.Storage.Tests.csproj
+++ b/Innovian.Telnyx.Storage.Tests/Innovian.Telnyx.Storage.Tests.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\Telnyx.Storage.Dotnet\Innovian.Telnyx.Storage.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="onemegabyte.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
