--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,11 @@ variables:
     value: Innovian.Telnyx.Storage
 
 steps:
+- task: NuGetToolInstaller@1
+  displayName: 'Install NuGet tool'
+  inputs:
+   checkLatest:  true
+   versionSpec: '>=6.7.0' # Latest versions at https://dist.nuget.org/tools.json
 - task: DotNetCoreCLI@2
   displayName: 'dotnet restore'
   inputs:
