--- a/Innovian.Telnyx.Storage/Innovian.Telnyx.Storage.csproj
+++ b/Innovian.Telnyx.Storage/Innovian.Telnyx.Storage.csproj
@@ -8,9 +8,14 @@
 		<Company>Innovian</Company>
 		<Authors>Whit Waldo</Authors>
 		<Copyright>2023</Copyright>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageProjectUrl>https://github.com/innovianhq/Innovian.Telnyx.Storage</PackageProjectUrl>
 		<Description>An unofficial NuGet package used to interact with the Telnyx Storage API. Innovian is not associated with Telnyx in any way.</Description>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
